# AudiobookTools

./: CLAUDE.md  README.md  patchnotes.md  pyproject.toml  roadmap.md  spec.md
.github/workflows/: ci.yml  publish.yml
audiobooktools/: __init__.py  cli.py  discover.py  reorg.py  report.py  retag.py  schema.py
catalog/: __init__.py  books.py  descriptions.py
catalog-template/: README.md  __init__.py  books.py  descriptions.py
docs/: curation-rules.md  workflows.md
scripts/: release_notes.py
tests/: test_catalog_imports.py  test_discover.py  test_release_notes.py  test_reorg.py  test_report.py  test_retag.py
