[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiobooktools"
dynamic = ["version"]
description = "Declarative tag normalization and Audiobookshelf-friendly reorganization for personal audiobook libraries."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Brandon LaRocque", email = "larocque.brandon@gmail.com" }]
requires-python = ">=3.10"
keywords = ["audiobook", "audiobookshelf", "mutagen", "metadata", "tagging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Utilities",
]
dependencies = ["mutagen>=1.47"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
audiobooktools = "audiobooktools.cli:main"
abt = "audiobooktools.cli:main"

[project.urls]
Homepage = "https://github.com/VirInvictus/AudiobookTools"
Repository = "https://github.com/VirInvictus/AudiobookTools"
Issues = "https://github.com/VirInvictus/AudiobookTools/issues"

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[^\\s]+)"

[tool.hatch.build.targets.wheel]
packages = ["audiobooktools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
ignore_missing_imports = true
